# ChangeLog for dev-ruby/authlogic-oid
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*authlogic-oid-1.0.3 (19 May 2009)

  19 May 2009; Hans de Graaff <graaff@gentoo.org>
  +authlogic-oid-1.0.3.ebuild, +metadata.xml:
  Initial import.
