@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST authlogic-oid-1.0.3.gem 23552 RMD160 e9252144028727b459107cdf8e992ce55f8e814c SHA1 11064575a610771894340198d1fb718c50db1cb6 SHA256 f2e57800ca3a1a93029719308c0eeef8f9fba0403e4e819c8927be402f0c52c7
+DIST authlogic-oid-1.0.4.gem 24064 RMD160 551fdf9707df1929ae739fa11a31a5ebf52a611a SHA1 8222cd2d0445d2625e175f26862446068b76a9fc SHA256 a15226df0835a585e6a111f93bf941b108d135448b63d4d231530afaa0c0bfab
 EBUILD authlogic-oid-1.0.3.ebuild 491 RMD160 0987eb4f5b25ff8f2bb4b849bc038e714e3f50b2 SHA1 41a0a05afdef7b3adc98aa262fc285fc222c1d8f SHA256 d2733d33634a5cbcf5ca2e1daa0a0efbca3f700f80e837ced2a3853e2a614ad3
-MISC ChangeLog 274 RMD160 55973e79925c21ed35e1740784aa00be681a7e2b SHA1 c7affa35fae4f8dfc1514c5238fc42d6c65dc64f SHA256 132ac9dac6f71ac4b2a16a0728e985ca8226a3909d64acf8d5fa8bac2b13ba46
+EBUILD authlogic-oid-1.0.4.ebuild 500 RMD160 afd3603119952c33f1208fd2628f3524aff230c5 SHA1 2785f22ced9514c5525fa65bbcdea5b9a957c0e4 SHA256 d35afa74c5c03c9bb1634868f141fd6ebb1759422475a0dc37d43a3e3442ccea
+MISC ChangeLog 440 RMD160 16ac2e6c4b021c57635da9e54b8725d6ac797888 SHA1 9612ada737c7d337d212a3b77872cd654eef365b SHA256 628f19f499d5225bf9b67a42a43bd133e90d587afeb0ff1afad0f587736e13ac
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkombmoACgkQqj4ysMWt/vuzaACg1mr54K9CamfJAO/bDU4SGHGK
+2RcAoOYHhUF2NtQOHLaBRdYUkHYp74yj
+=NmqA
+-----END PGP SIGNATURE-----
