@@ -1,0 +1,18 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.3.0.ebuild,v 1.1 2006/08/28 14:34:06 pclouds Exp $
+
+inherit ruby gems
+
+DESCRIPTION="Extension of the Authlogic library to add OpenID support."
+HOMEPAGE="http://authlogic-oid.rubyforge.org/"
+LICENSE="Ruby"
+
+KEYWORDS="~amd64 ~x86"
+SLOT="0"
+IUSE=""
+
+USE_RUBY="ruby18"
+
+RDEPEND=">=dev-ruby/authlogic-2.0.13
+	>=dev-ruby/rubygems-1.3.0"
