@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*authlogic-oid-1.0.4 (03 Jun 2009)
+
+  03 Jun 2009; Hans de Graaff <graaff@gentoo.org>
+  +authlogic-oid-1.0.4.ebuild:
+  Version bump that works with authlogic 2.0.13
+
 *authlogic-oid-1.0.3 (19 May 2009)
 
   19 May 2009; Hans de Graaff <graaff@gentoo.org>
